본인인증구현완료, todo 정보, 관심글 보여주기 추가

--- a/app/src/main/res/layout/fragment_profile_setting.xml
+++ b/app/src/main/res/layout/fragment_profile_setting.xml
@@ -58,8 +58,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="완료"
+        android:layout_margin="10dp"
         android:textSize="40sp"
-        android:background="#DF5637"
+        android:background="#CCCCBB"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
