--- a/app/src/main/res/layout/fragment_i_calendar.xml
+++ b/app/src/main/res/layout/fragment_i_calendar.xml
@@ -104,7 +104,7 @@
         />
 
 
-    //수정 후 저장 버튼
+    //수정 후 저장 버튼 건들 ㄴ
     <Button
         android:id="@+id/save_Btn"
         android:layout_width="0dp"
@@ -121,6 +121,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contextEditText" />
 
+<!--    //수정 버튼-->
+<!--    <Button-->
+<!--        android:id="@+id/edit_Btn"-->
+<!--        android:layout_width="180dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="8dp"-->
+<!--        android:layout_marginLeft="8dp"-->
+<!--        android:layout_marginEnd="8dp"-->
+<!--        android:layout_marginRight="8dp"-->
+<!--        android:text="수정"-->
+<!--        android:visibility="invisible"-->
+<!--        app:layout_constraintBaseline_toBaselineOf="@+id/save_Btn"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/del_Btn"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
 
     //일정 추가 버튼
     <Button
