--- a/app/src/main/res/layout/activity_pop_up_filter.xml
+++ b/app/src/main/res/layout/activity_pop_up_filter.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
-    android:layout_height="500dp"
+    android:layout_height="250dp"
     tools:context=".BulletinBoard.PopUpFilter"
     android:orientation="vertical"
     android:background="@color/white"
@@ -40,5 +40,11 @@
 
 
     </LinearLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tagEraseButton"
+        android:text="태그 지우기"/>
 
 </LinearLayout>
