--- a/app/src/main/res/layout/activity_pop_up_filter.xml
+++ b/app/src/main/res/layout/activity_pop_up_filter.xml
@@ -7,7 +7,8 @@
     tools:context=".BulletinBoard.PopUpFilter"
     android:orientation="vertical"
     android:background="@color/white"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:padding="10dp">
 
     <TextView
         android:layout_width="match_parent"
