--- a/app/src/main/res/layout/fragment_my_home.xml
+++ b/app/src/main/res/layout/fragment_my_home.xml
@@ -106,21 +106,21 @@
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/my_home_bar_chart"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@id/my_home_make_todo_tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintVertical_bias="0.471"
         app:layout_constraintHorizontal_bias="0.495"/>
-    <ListView
+    <ExpandableListView
         android:id="@+id/my_home_listview"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="200dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_home_bar_chart">
 
-    </ListView>
+    </ExpandableListView>
 </androidx.constraintlayout.widget.ConstraintLayout>
