ui 작업을 위한 폰트 변경

--- a/app/src/main/res/layout/fragment_board_main.xml
+++ b/app/src/main/res/layout/fragment_board_main.xml
@@ -18,6 +18,7 @@
             android:layout_weight="2"
             android:hint="@string/searchEditText"
             android:inputType="text"
+            android:fontFamily="@font/kc_regular"
             tools:ignore="TouchTargetSizeCheck" />
 
         <ImageButton
@@ -39,7 +40,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/filterButton"
             android:text="@string/filterButton"
-            android:textStyle="bold"
+            android:fontFamily="@font/kc_regular"
             android:layout_marginEnd="15dp"/>
 
         <ImageButton
