--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,15 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:textViewStyle">@style/customTextViewFontStyle</item>
+        <item name="android:buttonStyle">@style/customButtonFontStyle</item>
+        <item name="android:editTextStyle">@style/customEditTextFontStyle</item>
+        <item name="android:radioButtonStyle">@style/customRadioButtonFontStyle</item>
+        <item name="android:alertDialogTheme">@style/AlertDialogTheme</item>
 
+        <item name="android:checkboxStyle">@style/customCheckboxFontStyle</item>
+        <item name="android:actionBarStyle">@style/actionBarStyle</item>
+        <item name="android:actionMenuTextAppearance">@style/menuStyle</item>
 
     </style>
     <style name="SplashTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -21,5 +29,7 @@
        <!-- <item name="android:windowBackground">@mipmap/title</item>-->
 
     </style>
+
+
 
 </resources>
