0527 리스트뷰 중

--- a/app/src/main/res/layout/icontent.xml
+++ b/app/src/main/res/layout/icontent.xml
@@ -7,12 +7,13 @@
 
     <TextView
         android:id="@+id/text1"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="일정명"
         android:textSize="20dp"
         android:textColor="@color/black"/>
 
+    //리스트에서 체크박스 대신 했는지 보여줄거는?
     <CheckBox
         android:id="@+id/isDone"
         android:layout_width="wrap_content"
