220530 Menifest 파일, MainActivity 파일 수정 및 Study 구현

--- a/app/src/main/res/layout/activity_study_find.xml
+++ b/app/src/main/res/layout/activity_study_find.xml
@@ -6,23 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible">
-
-        <FrameLayout
-            android:id="@+id/popup_container"
-            android:layout_width="300dp"
-            android:layout_height="400dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-        </FrameLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -97,6 +80,13 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/btn_tag0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="전체" />
+
+                <Button
                     android:id="@+id/btn_tag1"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -145,13 +135,6 @@
                     android:layout_weight="1"
                     android:text="어학" />
 
-                <Button
-                    android:id="@+id/btn_tag8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="Button" />
-
             </LinearLayout>
 
         </HorizontalScrollView>
@@ -164,5 +147,21 @@
             android:layout_marginRight="15dp" />
 
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:id="@+id/popup_container"
+            android:layout_width="300dp"
+            android:layout_height="400dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+        </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
