--- a/app/src/main/res/layout/activity_study_post.xml
+++ b/app/src/main/res/layout/activity_study_post.xml
@@ -196,13 +196,15 @@
                     android:layout_width="2dp"
                     android:layout_height="match_parent"
                     android:background="?android:attr/listDivider" />
+
                 <Button
                     android:id="@+id/button7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="9dp"
-                    android:text="평가하기" />
+                    android:text="평가하기"
+                    android:visibility="visible" />
 
             </LinearLayout>
 
