--- a/app/src/main/res/layout/custom_item_study_find.xml
+++ b/app/src/main/res/layout/custom_item_study_find.xml
@@ -44,14 +44,14 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_study_name"
+                        android:id="@+id/tv_find_study_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="3"
                         android:text="스터디 이름" />
 
                     <TextView
-                        android:id="@+id/tv_study_member"
+                        android:id="@+id/tv_find_study_member"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
@@ -60,7 +60,7 @@
                 </LinearLayout>
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/iv_find_study_locked"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="1dp"
@@ -69,7 +69,7 @@
                     app:srcCompat="@drawable/ic_lock" />
 
                 <ImageButton
-                    android:id="@+id/imageButton"
+                    android:id="@+id/btn_find_study_liked"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="1dp"
@@ -87,57 +87,24 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tv_tag1"
+                    android:id="@+id/tv_find_study_tag"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="#tag1"
-                    android:textColor="#0000ff" />
-
-                <TextView
-                    android:id="@+id/tv_tag2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="#tag1"
-                    android:textColor="#0000ff" />
-
-                <TextView
-                    android:id="@+id/tv_tag3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="#tag1"
-                    android:textColor="#0000ff" />
-
-                <TextView
-                    android:id="@+id/tv_tag4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="#tag1"
-                    android:textColor="#0000ff" />
-
-                <TextView
-                    android:id="@+id/tv_tag5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="#tag1"
+                    android:text="#tag1 #tag2 #tag3"
                     android:textColor="#0000ff" />
 
             </LinearLayout>
 
-            <EditText
-                android:id="@+id/et_description"
+            <TextView
+                android:id="@+id/tv_find_study_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:ems="1"
                 android:gravity="start|top"
-                android:inputType="textMultiLine"
                 android:text="스터디 간략 설명"
-                android:textSize="10dp"
+                android:textSize="15dp"
                 tools:ignore="TouchTargetSizeCheck" />
 
         </LinearLayout>
