--- a/app/src/main/res/layout/custom_item_study_joined.xml
+++ b/app/src/main/res/layout/custom_item_study_joined.xml
@@ -59,43 +59,11 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tv_joined_tag0"
+                    android:id="@+id/tv_joined_tag"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="#tag1"
-                    android:textColor="#0000ff" />
-
-                <TextView
-                    android:id="@+id/tv_joined_tag1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="#tag1"
-                    android:textColor="#0000ff" />
-
-                <TextView
-                    android:id="@+id/tv_joined_tag2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="#tag1"
-                    android:textColor="#0000ff" />
-
-                <TextView
-                    android:id="@+id/tv_joined_tag3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="#tag1"
-                    android:textColor="#0000ff" />
-
-                <TextView
-                    android:id="@+id/tv_joined_tag4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="#tag1"
+                    android:text="#tag1 #tag2 #tag3"
                     android:textColor="#0000ff" />
 
             </LinearLayout>
