본인이 작성한 게시글에 수정, 삭제 버튼 보이게

--- a/app/src/main/res/layout/fragment_board_comment_item_view.xml
+++ b/app/src/main/res/layout/fragment_board_comment_item_view.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <TextView
         android:layout_width="match_parent"
@@ -16,7 +17,8 @@
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:orientation="horizontal">
+       android:orientation="horizontal"
+       android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
@@ -31,5 +33,29 @@
            android:id="@+id/commentNameTextView"/>
    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/editing"
+            android:id="@+id/commentEditButton"
+            android:visibility="invisible"/>
+
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/delete"
+            android:id="@+id/commentDeleteButton"
+            android:layout_marginLeft="30dp"
+            android:visibility="invisible"/>
+
+
+
+    </LinearLayout>
 
 </LinearLayout>
