--- a/app/src/main/res/layout/fragment_board_item_new.xml
+++ b/app/src/main/res/layout/fragment_board_item_new.xml
@@ -3,13 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="3dp"
-        android:layout_weight="8"
         android:background="?android:attr/listDivider" />
 
     <LinearLayout
@@ -20,15 +19,12 @@
         <View
             android:layout_width="3dp"
             android:layout_height="match_parent"
-            android:layout_weight="8"
-            android:background="?android:attr/listDivider"
-            tools:layout_weight="1" />
+            android:background="?android:attr/listDivider" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
-            android:layout_weight="8"
             android:orientation="vertical">
 
             <LinearLayout
@@ -47,15 +43,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:text="사용자 이름" />
+                    android:text="사용자 이름"
+                    android:layout_marginRight="100dp"/>
 
                 <TextView
                     android:id="@+id/timeTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
                     android:text="업로드 날짜" />
             </LinearLayout>
 
@@ -178,16 +173,13 @@
         <View
             android:layout_width="3dp"
             android:layout_height="match_parent"
-            android:layout_weight="8"
-            android:background="?android:attr/listDivider"
-            tools:layout_weight="1" />
+            android:background="?android:attr/listDivider" />
 
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="3dp"
-        android:layout_weight="1"
         android:background="?android:attr/listDivider" />
     <ImageView
         android:id="@+id/btn_post_comments"
@@ -208,16 +200,16 @@
         android:layout_marginTop="5dp">
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:hint="댓글을 입력하세요"
             android:inputType="textMultiLine"
-            android:layout_weight="2"
             android:id="@+id/commentEditText"/>
 
         <ImageButton
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
             android:id="@+id/addCommentButtonBoardItem"
             android:background="@drawable/write_icon"/>
 
@@ -226,7 +218,9 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="8"
         android:id="@+id/commentView"/>
+
 
 </LinearLayout>
