수정 기능 완료

--- a/app/src/main/res/layout/fragment_board_item_view.xml
+++ b/app/src/main/res/layout/fragment_board_item_view.xml
@@ -73,5 +73,11 @@
 
    </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/hiddenDid"
+        android:visibility="invisible"/>
+
 
 </LinearLayout>
